bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:2: error: overloaded method value abs with alternatives:
  (x$1: Double)Double <and>
  (x$1: Float)Float <and>
  (x$1: Long)Long <and>
  (x$1: Int)Int
 cannot be applied to (Boolean)
  if(Math.abs(n-100<=10)){
          ^NearHundred:5: error: overloaded method value abs with alternatives:
  (x$1: Double)Double <and>
  (x$1: Float)Float <and>
  (x$1: Long)Long <and>
  (x$1: Int)Int
 cannot be applied to (Boolean)
  if(Math.abs(n-200<=10)){
          ^